--- a/analysis/simulation_seven_tissues_uncorrelated.Rmd
+++ b/analysis/simulation_seven_tissues_uncorrelated.Rmd
@@ -16,7 +16,7 @@ source("/project2/xinhe/shengqian/cTWAS/cTWAS_analysis/analysis/simulation_help_
 plot_PIP <- function(configtag, runtag,  simutags, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
    susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_config", configtag,"_LDR",".susieIrss.txt")
-   f1 <- caliPIP_plot(phenofs, susieIfs, ...) 
+   f1 <- caliPIP_plot_combined(phenofs, susieIfs, ...) 
    return(f1)
 }
 ```
