--- a/analysis/simulation_seven_tissues_uncorrelated.Rmd
+++ b/analysis/simulation_seven_tissues_uncorrelated.Rmd
@@ -18,7 +18,7 @@ data <- round(data,3)
 data
 ```
 
-```{r echo=FALSE}
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 library(ctwas)
 library(data.table)
 require(latex2exp)
@@ -141,7 +141,7 @@ plot_par_7(truth,est,xlabels = c("Liver","Lung","Blood","Adipose","Artery","Hear
 ```
 
 ### PIP Calibration Plot
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE}
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, warning=FALSE}
 f1 <- plot_PIP(configtag, runtag, simutags, main = "Expression Trait PIP Calibration")
 f2 <-  plot_PIP_combined(configtag, runtag, simutags, main = "Gene PIP Calibration")
 gridExtra::grid.arrange(f1, f2, ncol =2)
@@ -248,7 +248,7 @@ plot_par_7(truth,est,xlabels = c("Liver","Lung","Blood","Adipose","Artery","Hear
 ```
 
 ### PIP Calibration Plot
-```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE}
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, warning=FALSE}
 f1 <- plot_PIP(configtag, runtag, simutags, main = "Expression Trait PIP Calibration")
 f2 <-  plot_PIP_combined(configtag, runtag, simutags, main = "Gene PIP Calibration")
 gridExtra::grid.arrange(f1, f2, ncol =2)
